--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^3.2.0",
     "json-loader": "^0.5.7",
     "mini-css-extract-plugin": "^0.4.3",
+    "monaco-editor-webpack-plugin": "^1.6.0",
     "node-sass": "^4.9.3",
     "pug": "^2.0.3",
     "pug-html-loader": "^1.1.5",
@@ -39,7 +40,6 @@
     "ts-loader": "^5.2.1",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.8.0",
-    "monaco-editor-webpack-plugin": "^1.7.0"
+    "webpack-dev-server": "^3.8.0"
   }
 }
